# python-kerblaxion

./: README.md
garage/: hero.piko
garage/graphics/enemy01/: enemy01.piko  explode01.piko  explode02.piko  explode03.piko  explode04.piko
garage/graphics/hero/: hero01.piko  hero02.piko  hero03.piko  hero04.piko  life.xcf
src/: .env.example  .gitignore  Dockerfile.dev  README.md  console  docker-compose.linux.yml.example  pyproject.toml  setup.py
src/.devcontainer/: devcontainer.json
src/arclia/happygame/: assets.py  surface.py
src/arclia/kerblaxion/: __main__.py  core.py  engine.py  game.py  hero.py  moment.py
src/arclia/kerblaxion/assets/: __init__.py
src/arclia/kerblaxion/entities/: bullet.py  core.py  hero.py  invader.py  star.py
src/arclia/pubsub/: __init__.py
src/arclia/spaxion/: __main__.py  game.py
src/docs/: DESIGN.md
