[tool.poetry]
name = "kerblaxion"
version = "0.1.0"
description = "Space Invaders + Galaxian Clone"
authors = ["Brian Lauber"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
